--- a/Webpack/5.性能优化/6. 自动分包.md
+++ b/Webpack/5.性能优化/6. 自动分包.md
@@ -1,8 +1,8 @@
-# 自动分包 {ignore}
+# 自动分包
 
 # 基本原理
 
-不同与手动分包，自动分包是从**实际的角度**出发，从一个更加**宏观的角度**来控制分包，而一般不对具体哪个包要分出去进行控制
+不同于手动分包，自动分包是从**实际的角度**出发，从一个更加**宏观的角度**来控制分包，而一般不对具体哪个包要分出去进行控制
 
 因此使用自动分包，不仅非常方便，而且更加贴合实际的开发需要
 
@@ -184,7 +184,7 @@ new HtmlWebpackPlugin({
 
 自动分包的原理其实并不复杂，主要经过以下步骤：
 
-1. 检查每个chunk编译的结果
+1. 检查每个chunk编译的结果（构建依赖模块的结果：即转换后的代码）
 2. 根据分包策略，找到那些满足策略的模块
 3. 根据分包策略，生成新的chunk打包这些模块（代码有所变化）
 4. 把打包出去的模块从原始包中移除，并修正原始包代码
