--- a/Webpack/1.Webpack 核心功能/1. 浏览器端的模块化存在的问题.md
+++ b/Webpack/1.Webpack 核心功能/1. 浏览器端的模块化存在的问题.md
@@ -2,7 +2,7 @@
 
 ## 简介
 
-学习 webpack 所需前置知识：ES6、模块化、包管理器、git
+学习 webpack 所需前置知识：ES6、模块化、包管理器、Git
 
 学习 webpack 的重心：
 
@@ -14,11 +14,11 @@
 
 问题：
 
-- 效率问题：精细的模块划分带来了更多的JS文件，更多的JS文件带来了更多的请求，降低了页面访问效率
-- 兼容性问题：浏览器目前仅支持 ES6 的模块化标准，并且还存在兼容性问题（对于使用 commonjs 导出的第三方库，例如 axios，浏览器则不能直接使用）
+- 效率问题：精细的模块划分导致 JS 文件数量剧增，间接导致 Http 请求次数剧增，从而降低了页面的访问效率
+- 兼容性问题：浏览器目前仅支持 ES6 的模块化标准（ES Module），并且还存在兼容性问题（对于使用 commonjs 导出的第三方库，浏览器则不能直接使用）
 - 工具问题：浏览器不支持 npm 下载的第三方包
 
-这些仅仅是前端工程化的一个缩影
+然而，这些仅仅是前端工程化的一个缩影
 
 当开发一个具有规模的程序，你将遇到非常多的非业务问题，这些问题包括：执行效率、兼容性、代码的可维护性可扩展性、团队协作、测试等等，我们将这些问题称之为工程问题。工程问题与业务无关，但它深刻的影响到开发进度，如果没有一个好的工具解决这些问题，将使得开发进度变得极其缓慢，同时也让开发者陷入技术的泥潭。
 
@@ -53,7 +53,7 @@
 
 这样的工具，叫做**构建工具**
 
-![](assets/2020-01-07-05-06-11.png)
+![](assets/1.png)
 
 这样一来，开发者就可以专注于开发时态的代码结构，而不用担心运行时态遇到的问题了。
 
@@ -70,9 +70,9 @@
 
 > 为什么需要构建工具？
 >
-> 我认为构建的工具的出现，主要是为了解决开发时态和运行时态的需求差异。
+> 我认为构建工具的出现，主要是为了解决开发时态和运行时态的需求差异。
 >
-> 在开发时，我们往往希望 模块划分越细越好、能够支持多种模块化标准、支持包管理器下载的三方模块、不用关注其他繁多的非业务问题（例如兼容性、执行效率）
+> 在开发时，我们往往希望 模块划分越细越好、支持多种模块化标准、支持包管理器下载的三方模块、不用关注其他繁多的非业务问题（例如兼容性、执行效率）
 >
 > 而在运行时，我们往往希望 文件数量越少越好、文件体积越小越好、代码内容越乱越好、兼容各大浏览器、解决执行效率问题
 >
