--- a/Webpack/1.Webpack 核心功能/10. loader.md
+++ b/Webpack/1.Webpack 核心功能/10. loader.md
@@ -14,17 +14,17 @@ module.exports = function (sourceCode) {
 };
 ```
 
-![](assets/2020-01-13-10-39-24.png)
+![](assets/24.png)
 
 ## 运行时间点
 
 > loader函数将在模块解析的过程中被调用，以得到最终的源码。
 
-![](assets/2020-01-13-09-35-44.png)
+![](assets/25.png)
 
 **处理loaders流程：**
 
-![image-20230318230921161](assets/image-20230318230921161.png)
+![](assets/26.png)
 
 ## 配置
 
@@ -131,7 +131,7 @@ module.exports = function (sourceCode) {
 
 **./src/assets/webpack.png**
 
-![webpack](assets/webpack.png)
+![webpack](assets/27.png)
 
 **./src/index.js**
 
@@ -197,7 +197,7 @@ function getFilePath(buffer, name) {
     var filename = loaderUtil.interpolateName(this, name, {
         content: buffer
     }); // 利用工具库生成文件名 参数1：loader的this 参数2：生成文件名的规则 参数3：文件内容
-    this.emitFile(filename, buffer); // 利用工具库直接输出到最终文件（这种方式输出的文件shi）
+    this.emitFile(filename, buffer); // 利用工具库直接输出到最终文件
     return filename;
 }
 ```
