--- a/Webpack/1.Webpack 核心功能/9. 入口和出口的最佳实践.md
+++ b/Webpack/1.Webpack 核心功能/9. 入口和出口的最佳实践.md
@@ -4,7 +4,7 @@
 
 ## 一个页面一个JS
 
-![](assets/2020-01-10-12-00-28.png)
+![](assets/21.png)
 
 源码结构
 
@@ -56,7 +56,7 @@ module.exports = {
 
 ## 一个页面多个JS
 
-![](assets/2020-01-10-12-38-03.png)
+![](assets/22.png)
 
 源码结构
 
@@ -98,7 +98,7 @@ module.exports = {
 
 所谓单页应用，是指整个网站（或网站的某一个功能块）只有一个页面，页面中的内容全部靠JS创建和控制。 vue和react都是实现单页应用的利器。
 
-![](assets/2020-01-10-12-44-13.png)
+![](assets/23.png)
 
 源码结构
 
