--- a/Webpack/1.Webpack 核心功能/3. 模块化兼容性.md
+++ b/Webpack/1.Webpack 核心功能/3. 模块化兼容性.md
@@ -6,17 +6,17 @@
 
 如果导出和导入使用的是同一种模块化标准，打包后的效果和之前学习的模块化没有任何差异
 
-![](assets/2020-01-07-07-50-09.png)
+![](assets/2.png)
 
-![](assets/2020-01-07-07-53-45.png)
+![](assets/3.png)
 
 ## 不同模块化标准
 
 不同的模块化标准，webpack按照如下的方式处理
 
-![](assets/2020-01-07-07-54-25.png)
+![](assets/4.png)
 
-![](assets/2020-01-07-07-55-54.png)
+![](assets/5.png)
 
 ## 最佳实践
 
