--- a/Webpack/1.Webpack 核心功能/8. 入口和出口.md
+++ b/Webpack/1.Webpack 核心功能/8. 入口和出口.md
@@ -1,7 +1,5 @@
 # 入口和出口
 
-![](assets/2020-01-09-15-51-07.png)
-
 ## 入口
 
 > 入口通过entry进行配置，**入口真正配置的是chunk**
@@ -16,7 +14,7 @@ module.exports = {
 // 上述代码会被转换为
 module.exports = {
 	entry:{
-		main:'./src/index.js' // shu'x'm
+		main:'./src/index.js'
   }
 }
 ```
@@ -56,7 +54,7 @@ output 的 filename 配置：
 
 - name：chunkname
 - hash: 总的资源hash，通常用于解决缓存问题
-- chunkhash: 使用chunkhash
+- chunkhash: chunkhash
 - id: 使用chunkid，不推荐（由于chunkid在开发环境和生成环境下不一致，所以不推荐）
 
 ```js
