--- a/react/1.起步/1-2.Hello World.md
+++ b/react/1.起步/1-2.Hello World.md
@@ -21,19 +21,19 @@
 
 ## React.createElement
 
-创建一个React元素，称作虚拟DOM，本质上是一个对象（与vue的虚拟dom类似，用于描述视图的界面结构）
+创建一个 React 元素，称作虚拟 DOM，本质上是一个对象（与 vue 的虚拟 dom 类似，用于描述视图的界面结构）
 
-1. 参数1：元素类型，如果是字符串，一个普通的HTML元素
+1. 参数1：元素类型，如果是字符串，代表普通的HTML元素
 2. 参数2：元素的属性，一个对象
 3. 后续参数：元素的子节点
 
 ## ReactDOM.render
 
-将一个React元素（虚拟dom）转换成真实dom
+将一个 React 元素（虚拟 dom）转换成真实 dom
 
 1. 参数1：React元素（对象）
 2. 参数2：渲染的位置（容器） 
 
 ## JSX
 
-JS的扩展语法，需要使用babel进行转义。无非是一个语法糖，最终还是使用React.createElement方法创建虚拟的dom对象。
+JS 的扩展语法，需要使用 babel 进行转义。无非是一个语法糖，最终还是使用 React.createElement 方法创建虚拟的 dom 对象。
