--- a/react/2.React核心概念/2-3.组件和组件属性.md
+++ b/react/2.React核心概念/2-3.组件和组件属性.md
@@ -17,12 +17,27 @@
 
 必须提供render函数，用于渲染组件
 
+类组件的构造函数中必须调用 super(props) ? 调用之后父组件会设置 当前组件 this.props = props
+
 ## 组件的属性
 
 1. 对于函数组件，属性会作为一个对象的属性，传递给函数的参数
 2. 对于类组件，属性会作为一个对象的属性，传递给构造函数的参数
 
 注意：组件的属性，应该使用小驼峰命名法
+
+```js
+const o = {
+  name:"xgglt",
+  age:20,
+  loves:[]
+}
+// 以下为等效代码
+<Comp name={o.name} age={o.age} loves={o.loves} />
+<Comp {} />
+```
+
+
 
 **组件无法改变自身的属性**。
 
