--- a/react/2.React核心概念/2-5.组件状态.md
+++ b/react/2.React核心概念/2-5.组件状态.md
@@ -8,11 +8,22 @@
 
 **状态初始化**
 
+两种方式：
+
+1. 
+2. 
+
 **状态的变化**
 
 不能直接改变状态：因为React无法监控到状态发生了变化
 
-必须使用this.setState({})改变状态
+必须使用this.setState({})改变状态（此方法由父类React.Component提供）
+
+```js
+this.setState({}) // 调用该方法传入的对象会与初始的状态进行混合，理解为Object.assign()
+```
+
+
 
 一旦调用了this.setState，会导致当前组件重新渲染
 
