--- a/react/2.React核心概念/2-1.JSX.md
+++ b/react/2.React核心概念/2-1.JSX.md
@@ -2,8 +2,8 @@
 
 ## 什么是JSX
 
-- Facebook起草的JS扩展语法
-- 本质是一个JS对象，会被babel编译，最终会被转换为React.createElement
+- Facebook 起草的 **JS 扩展语法**
+- 本质是一个JS对象，会被babel编译，最终会被转换为 **React.createElement**
 - 每个JSX表达式，有且仅有一个根节点
   - React.Fragment
 - 每个JSX元素必须结束（XML规范）
@@ -14,7 +14,7 @@
 - 将表达式作为内容的一部分
   - null、undefined、false不会显示
   - 普通对象，不可以作为子元素
-  - 可以放置React元素对象
+  - 可以放置 React 元素对象
 - 将表达式作为元素属性
 - 属性使用小驼峰命名法
 - 防止注入攻击
