--- a/02. 移动端适配/03. 移动端适配.md
+++ b/02. 移动端适配/03. 移动端适配.md
@@ -1,5 +1,9 @@
 # 移动端适配
 
+> xgglt：
+>
+> 移动端适配：不同的尺寸的屏幕呈现相同比例的效果
+
 在前面，我们已经介绍了移动端的一些基础知识，以及 *viewport* 视口，接下来我们就要来说一说什么是移动端适配了。
 
 所谓适配，其实概念很简单，就是在任意手机中我们的网页显示都是正常的。
@@ -266,7 +270,15 @@ div:nth-child(4) {
 
 ## *rem* 适配
 
-**xgglt：rem适配的核心是需要将根元素的字体大小设置为 `1/DPR * 100` px**
+**xgglt：rem适配的核心是需要将根元素的字体大小设置为 `设备宽度/设计稿宽度* 100` px**
+
+> xgglt：
+>
+> REM适配的核心是不同尺寸屏幕拆分为列数，按列数进行布局
+>
+> 设备宽度 / 设计稿宽度 = 设计稿每列对应的设备宽度（设置为html根字体大小，后续其他元素量出来是多少就能写多少 rem）
+>
+> 但是，
 
 接下来就要介绍目前在移动端适配中比较主流的方案 - *rem* 适配了。
 
