--- a/06. 常见问题/前端移动端面试题汇总.md
+++ b/06. 常见问题/前端移动端面试题汇总.md
@@ -414,7 +414,7 @@
 
 #### 11. uniapp进行条件编译的两种方法？小程序端和H5的代表值是什么？
 
->条件编译的实现通过 #ifdef、#ifndef 的两种方式，其中#ifdef为当前的端正确匹配，#ifndef为取反操作；
+>条件编译的实现通过 #ifdef、#的两种方式，其中#ifdef为当前的端正确匹配，#ifndef为取反操作；
 >
 >匹配html5端的值为 #ifdef H5  
 >
