feat：update HTML

--- a/HTML/01 文档声明.md
+++ b/HTML/01 文档声明.md
@@ -1,6 +1,24 @@
 # 文档声明
 
+**xgglt**
 
+> `<!DOCTYPE html>` 是什么，有什么作用？
+>
+> 它是*HTML* 的文档声明，通过它告知浏览器，以哪一个 *HTML* 版本标准解析文档。
+>
+> 
+>
+> 如果没有设置 `<!DOCTYPE html>` 会怎么样？
+>
+> 在浏览器发展的过程中，*HTML* 经历过很多个版本，不同版本所支持的元素、属性略有差异，如果不预先告诉浏览器以哪一个 *HTML* 版本标准解析文档，大部分浏览器将开启最大兼容模式来解析文档，我们称之为**怪异模式**。这不仅会降低解析效率，而且会在解析过程中产生一些难以预知的 *bug*。
+>
+> 
+>
+> 怪异模式的浏览器行为？
+>
+> 1. 盒模型宽高包含内边距padding和边框border （`box-sizing: border-box;`）
+> 2. 能够设置行内元素的宽高
+> 3. 表格中的字体样式不能继承
 
 ## 经典真题
 
@@ -289,6 +307,8 @@
 > 4. *HTML5* 没有 *DTD* ，因此也就没有严格模式与混杂模式的区别，*HTML5* 有相对宽松的语法，实现时，已经尽可能大的实现了向后兼容。**（ *HTML5* 没有严格和混杂之分）**
 >
 > **意义：**严格模式与混杂模式存在的意义与其来源密切相关，如果说只存在严格模式，那么许多旧网站必然受到影响，如果只存在混杂模式，那么会回到当时浏览器大战时的混乱，每个浏览器都有自己的解析模式。
+
+
 
 
 
