--- a/HTML/02 语义化.md
+++ b/HTML/02 语义化.md
@@ -1,6 +1,13 @@
 # 语义化
 
+**xgglt**
 
+> 谈谈你对HTML语义化元素的理解。
+>
+> 1. 利于SEO（爬虫通过标签来确定关键字的权重，帮助爬虫抓取更多的有效信息）
+> 2. 网页结构清晰（在网页丢失CSS的情况下，也能够呈现友好的内容结构）
+> 3. 团队协作（语义化使得代码更具有可读性，让其他开发者更加理解你的 *html* 结构，减少差异化）
+> 4. 方便其他设备解析（屏幕阅读器，方便此类设备根据标签类型控制语速语调）
 
 ## 经典真题
 
