--- a/typescript/TypeScript基础/1. 概述.md
+++ b/typescript/TypeScript基础/1. 概述.md
@@ -8,11 +8,9 @@
 
 **TypeScript的优势**
 
-1. 就业，更大的竞争优势
+1. 更好的开发体验
 
-2. 更好的开发体验
-
-3. 解决JS开发中存在的问题（前端开发过程中，花费了大量的时间在解决bug）
+2. 解决JS开发中存在的问题（前端开发过程中，花费了大量的时间在解决bug）
 
 **JS的原罪**
 
@@ -53,6 +51,5 @@
 
 **额外的惊喜：**
 
-1. JS中也有类和对象，支持面向对象开发。不过，在过去没有类型检查，很多面向对象的场景实现起来会有诸多问题。
-2. 在使用TS后，可以编写出完善的面向对象代码。
+JS中也有类和对象，支持面向对象开发。不过，在过去没有类型检查，很多面向对象的场景实现起来会有诸多问题。在使用TS后，可以编写出完善的面向对象代码。
 
