--- a/react16/3.React进阶/3-5.ref.md
+++ b/react16/3.React进阶/3-5.ref.md
@@ -20,27 +20,45 @@
 
 ```jsx
 //方式1  
-constructor(props) {
+  constructor(props) {
     super(props);
-    this.txt = React.createRef();
-}
+    this.DOM = createRef();
+  }
 
 //方式2
   constructor(props) {
     super(props);
-    this.txt = {
+    this.DOM = {
       current: null,
     };
-}
+  }
 
 render(){
-	return <div ref={this.txt}></div>
+	return <div ref={this.DOM}></div>
 }
 ```
 
 ### 赋值函数
 
 所赋值的函数在被调用时，会接收一个参数，该参数根据ref所附着的位置来决定，可能是真实的dom对象，也可能是组件实例对象
+
+```jsx
+import { Component } from 'react';
+
+export default class ClassComp extends Component {
+  createRef = (DOM) => {
+    this.DOM = DOM;
+  };
+
+  componentDidMount() {
+    console.log(this.DOM); // <div>ClassComp</div>
+  }
+
+  render() {
+    return <div ref={this.createRef}>ClassComp</div>;
+  }
+}
+```
 
 函数的调用时间点：
 
@@ -50,11 +68,4 @@ render(){
    1. 旧的函数被调用时，传递的参数为null
    2. 新的函数被调用时，传递的参数为对象（根据ref所附着的位置来决定，可能是真实的dom对象，也可能是组件实例对象）
 3. 如果ref所在的组件被卸载，会调用函数
-
-**谨慎使用ref**
-
-能够使用属性和状态进行控制，就不要使用ref。
-
-1. 调用真实的DOM对象中的方法
-2. 某个时候需要调用类组件的方法
 
