--- a/react16/3.React进阶/3-7.ref转发.md
+++ b/react16/3.React进阶/3-7.ref转发.md
@@ -1,7 +1,5 @@
 # Ref转发
 
-## 使用场景
-
 ## 使用方式
 
 **React.forwardRef()**
@@ -10,7 +8,7 @@
 const NewComp = React.forwardRef(Comp);
 ```
 
-参数`Comp`:只能传递函数组件，不能是类组件，**函数组件的第二个参数即为转发的ref对象**
+参数`Comp`:只能传递函数组件(这里可以理解为普通函数，函数接收两个参数)，不能是类组件，**函数组件的第二个参数即为转发的ref对象**
 
 返回值`NewComp` :返回一个新的组件（类似于一个高阶组件） 
 
