--- a/react16/4.HOOK/4-1.HOOK简介.md
+++ b/react16/4.HOOK/4-1.HOOK简介.md
@@ -29,7 +29,7 @@ HOOK专门用于增强函数组件的功能（HOOK在类组件中是不能使用
 
 官方强调：没有必要更改已经完成的类组件，官方目前没有计划取消类组件，只是鼓励使用函数组件
 
-HOOK（钩子）本质上是一个函数(命名上总是以use开头)，该函数可以挂载任何功能
+HOOK（钩子）本质上是一个函数(命名上总是以use开头)，该函数可以挂载任何功能，会在合适的时间点运行
 
 HOOK种类：
 
