--- a/JavaScript/03 包装类型.md
+++ b/JavaScript/03 包装类型.md
@@ -1,5 +1,7 @@
 # 包装类型
 
+> xgglt：基本包装类型是，每当我们去读取一个基本数据类型的值，或者是将基本数据类型以对象的形式去使用时，JS就会在内部创建其对应的基本包装类型的临时对象，以至于我们可以使用该临时对象上的内置方法，从而我们可以对string、number、boolean这三种基本数据类型的数据进行更多的操作。注意：读取或操作基本数据类型的值的语句一经执行完毕，内部就会立即销毁基本包装类型的临时对象。
+
 ## 经典真题
 
 
@@ -16,7 +18,7 @@
 
 
 
-按照最新 *ES* 标准定义，基本数据类型（*primitive value*）包括 *undefined、null、boolean、number、symbol、string*。
+按照最新 *ES* 标准定义，基本数据类型（*primitive value*）包括 *undefined、null、boolean、number、symbol、string*、bigint。
 
 引用类型包括 *Object、Array、Date、RegExp* 等。
 
